add: animation on gallery_cards

--- a/index.html
+++ b/index.html
@@ -77,44 +77,44 @@
         </section>
         <section class="works" id="works" >
             <h3 class="works_title" >MY WORKS</h3>
+            <hr class="works_hr" >
             <div class="gallery">
                 <div class="gallery_cards">
-                    <img src="./img/works/booki.webp" alt="Site web Bokki">
+                        <img src="./img/works/booki.webp" alt="Site web Bokki">
                     <div class="shadow">
                         <img src="./img/logos/search.svg" alt="icone loupe">
                     </div>
                 </div>
                 <div class="gallery_cards">
-                    <img src="./img/works/ohmyfood.webp" alt="Site web ohmyfood">
+                        <img src="./img/works/ohmyfood.webp" alt="Site web ohmyfood">
                     <div class="shadow">
                         <img src="./img/logos/search.svg" alt="icone loupe">
                     </div>
                 </div>
                 <div class="gallery_cards">
-                    <img src="./img/works/sophie_bluel.webp" alt="Site web de Sophie Bluel">
+                        <img src="./img/works/sophie_bluel.webp" alt="Site web de Sophie Bluel">
                     <div class="shadow">
                         <img src="./img/logos/search.svg" alt="icone loupe">
                     </div>
                 </div>
                 <div class="gallery_cards">
-                    <img src="./img/works/kasa.webp" alt="Site web Kasa">
+                        <img src="./img/works/kasa.webp" alt="Site web Kasa">
                     <div class="shadow">
                         <img src="./img/logos/search.svg" alt="icone loupe">
                     </div>
                 </div>
                 <div class="gallery_cards">
-                    <img src="./img/works/nina_carducci.webp" alt="Site web de Nina Carducci">
+                        <img src="./img/works/nina_carducci.webp" alt="Site web de Nina Carducci">
                     <div class="shadow">
                         <img src="./img/logos/search.svg" alt="icone loupe">
                     </div>
                 </div>
                 <div class="gallery_cards">
-                    <img src="./img/works/argent_bank.webp" alt="Site web de Nina Carducci">
+                        <img src="./img/works/argent_bank.webp" alt="Site web de Nina Carducci">
                     <div class="shadow">
                         <img src="./img/logos/search.svg" alt="icone loupe">
                     </div>
                 </div>
-
             </div>
         </section>
     </main>
