add: json file and move sectionn about in html

--- a/index.html
+++ b/index.html
@@ -31,93 +31,120 @@
                     <li><a class="nav_link" href="./index.html">HOME</a></li>
                     <li><a class="nav_link" href="#techno">TECHNO</a></li>
                     <li><a class="nav_link" href="#works">WORKS</a></li>
-                    <li><a class="nav_link" href="./index.html">ABOUT</a></li>
+                    <li><a class="nav_link" href="#about">ABOUT</a></li>
                 </ul>
                 <div class="me">
-                    <img class="me_img" src="./img/portrait/portrait1.webp" alt="Portrait de Laurent D'ALEO">
+                    <img class="me_img" src="./assets/img/portrait/portrait1.webp" alt="Portrait de Laurent D'ALEO">
                 </div>
             </div>
         </nav>
     </header>
     <main>
+                <!--                  About                           -->
+<section class="about" id="about" >
+    <div class="about_container">
+        <div class="background_photo"></div>
+        <div class="about_portrait">
+            <img src="" alt="">
+        </div>
+        <div class="about_titles">
+            <p>who am i</p>
+            <h3>HELLO</h3>
+            <p class="about_description">
+                Je suis un passionné d'informatique depuis plus de 25 ans,
+                j'ai connu une époque ou internet n'existait pas et l'informatique 
+                était encore au stade de la préhistoire, j'ai d'abord construit ma
+                carriére autour du hardware, des réseaux informatiques, avec l'arrivée
+                du web 2.0 j'ai suivi une formation chez Openclassrooms et 
+                maintenant je suis un intégrateur web, je mets en oeuvre mes talents 
+                pour digitalisé aussi bien les entreprises que les
+                particuliers souhaitant avoir une visibilé sur le web et développé leurs
+                activitées.Si vous avez décider de faire ce pas, alors n'héssité plus contactez-moi 
+                pour que nous puissions discuter ensemble de vos objectifs et que j'apportes
+                des solutions à vos besoins.</p>
+        </div>
+    </div>
+</section>
         <section class="techno" id="techno">
             
             <h3 class="techno_title">MY TECHNOS</h3>
             <hr class="techno_hr" >
             <div class="techno_container">
                 <div class="techno_card">
-                    <img src="./img/logos/code-solid-blue.svg" alt="Symbole de code">
+                    <img src="./assets/img/logos/code-solid-blue.svg" alt="Symbole de code">
                     <p class="techno_logo_title" >HTML</p>
                 </div>
                 <div class="techno_card">
-                    <img src="./img/logos/code-solid-blue.svg" alt="Symbole de code">
+                    <img src="./assets/img/logos/code-solid-blue.svg" alt="Symbole de code">
                     <p class="techno_logo_title" >CSS</p>
                 </div>
                 <div class="techno_card">
-                    <img src="./img/logos/code-solid-blue.svg" alt="Symbole de code">
+                    <img src="./assets/img/logos/code-solid-blue.svg" alt="Symbole de code">
                     <p class="techno_logo_title" >SASS</p>
                 </div>
                 <div class="techno_card">
-                    <img src="./img/logos/code-solid-blue.svg" alt="Symbole de code">
+                    <img src="./assets/img/logos/code-solid-blue.svg" alt="Symbole de code">
                     <p class="techno_logo_title" >JS</p>
                 </div>
                 <div class="techno_card">
-                    <img src="./img/logos/code-solid-blue.svg" alt="Symbole de code">
+                    <img src="./assets/img/logos/code-solid-blue.svg" alt="Symbole de code">
                     <p class="techno_logo_title" >REACT JS</p>
                 </div>
                 <div class="techno_card">
-                    <img src="./img/logos/code-solid-blue.svg" alt="Symbole de code">
+                    <img src="./assets/img/logos/code-solid-blue.svg" alt="Symbole de code">
                     <p class="techno_logo_title" >REDUX</p>
                 </div>
                 <div class="techno_card">
-                    <img src="./img/logos/code-solid-blue.svg" alt="Symbole de code">
+                    <img src="./assets/img/logos/code-solid-blue.svg" alt="Symbole de code">
                     <p class="techno_logo_title" >API-REST</p>
                 </div>
             </div>
         </section>
+
+        <!--                  Works                           -->
+
         <section class="works" id="works" >
             <h3 class="works_title" >MY WORKS</h3>
             <hr class="works_hr" >
             <div class="gallery">
                 <div class="gallery_cards">
-                        <img src="./img/works/booki.webp" alt="Site web Bokki">
+                        <img src="./assets/img/works/booki.webp" alt="Site web Bokki">
                     <div class="shadow">
-                        <img src="./img/logos/search.svg" alt="icone loupe">
+                        <img src="./assets/img/works/svg/searchengin.svg" alt="icone loupe">
                     </div>
                 </div>
                 <div class="gallery_cards">
-                        <img src="./img/works/ohmyfood.webp" alt="Site web ohmyfood">
+                        <img src="./assets/img/works/ohmyfood.webp" alt="Site web ohmyfood">
                     <div class="shadow">
-                        <img src="./img/logos/search.svg" alt="icone loupe">
+                        <img src="./assets/img/works/svg/searchengin.svg" alt="icone loupe">
                     </div>
                 </div>
                 <div class="gallery_cards">
-                        <img src="./img/works/sophie_bluel.webp" alt="Site web de Sophie Bluel">
+                        <img src="./assets/img/works/sophie_bluel.webp" alt="Site web de Sophie Bluel">
                     <div class="shadow">
-                        <img src="./img/logos/search.svg" alt="icone loupe">
+                        <img src="./assets/img/works/svg/searchengin.svg" alt="icone loupe">
                     </div>
                 </div>
                 <div class="gallery_cards">
-                        <img src="./img/works/kasa.webp" alt="Site web Kasa">
+                        <img src="./assets/img/works/kasa.webp" alt="Site web Kasa">
                     <div class="shadow">
-                        <img src="./img/logos/search.svg" alt="icone loupe">
+                        <img src="./assets/img/works/svg/searchengin.svg" alt="icone loupe">
                     </div>
                 </div>
                 <div class="gallery_cards">
-                        <img src="./img/works/nina_carducci.webp" alt="Site web de Nina Carducci">
+                        <img src="./assets/img/works/nina_carducci.webp" alt="Site web de Nina Carducci">
                     <div class="shadow">
-                        <img src="./img/logos/search.svg" alt="icone loupe">
+                        <img src="./assets/img/works/svg/searchengin.svg" alt="icone loupe">
                     </div>
                 </div>
                 <div class="gallery_cards">
-                        <img src="./img/works/argent_bank.webp" alt="Site web de Nina Carducci">
+                        <img src="./assets/img/works/argent_bank.webp" alt="Site web de Nina Carducci">
                     <div class="shadow">
-                        <img src="./img/logos/search.svg" alt="icone loupe">
+                        <img src="./assets/img/works/svg/searchengin.svg" alt="icone loupe">
                     </div>
                 </div>
             </div>
         </section>
     </main>
-
 </body>
 </html>
