add: change portrit and css

--- a/index.html
+++ b/index.html
@@ -13,10 +13,6 @@
 <body>
     <header>
         <div class="logo">
-           <!-- <img class="logo_img" src="./img/logos/_45b85919-7375-4ae7-b904-d6e7005b3c77.webp" alt="Logo de Laurent D'aleo"> -->
-            <div>
-                <h1 class="title_logo">PORTFOLIO</h1>
-            </div>
             <div class="banner">
                 <p class="banner_title">MY NAME IS</p>
                 <H2 class="name">LAURENT D'ALEO</H2>
@@ -34,7 +30,7 @@
                     <li><a class="nav_link" href="#about">ABOUT</a></li>
                 </ul>
                 <div class="me">
-                    <img class="me_img" src="./assets/img/portrait/portrait1.webp" alt="Portrait de Laurent D'ALEO">
+                    <img class="me_img" src="./assets/img/portrait/portrait1.jpg" alt="Portrait de Laurent D'ALEO">
                 </div>
             </div>
         </nav>
@@ -44,12 +40,12 @@
 <section class="about" id="about" >
     <div class="about_container">
         <div class="background_photo"></div>
-        <div class="about_portrait">
-            <img src="" alt="">
-        </div>
+            <div class="about_portrait">
+                <img  class="portrait_img" src="./assets/img/portrait/me.webp" alt="">
+            </div>
         <div class="about_titles">
-            <p>who am i</p>
-            <h3>HELLO</h3>
+            <p class="who_title" >who am i</p>
+            <h3 class="hello_title" >HELLO</h3>
             <p class="about_description">
                 Je suis un passionné d'informatique depuis plus de 25 ans,
                 j'ai connu une époque ou internet n'existait pas et l'informatique 
@@ -66,7 +62,6 @@
     </div>
 </section>
         <section class="techno" id="techno">
-            
             <h3 class="techno_title">MY TECHNOS</h3>
             <hr class="techno_hr" >
             <div class="techno_container">
