add: add footer,and style css

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <li><a class="nav_link" href="#techno">TECHNO</a></li>
                     <li><a class="nav_link" href="#works">WORKS</a></li>
                     <li><a class="nav_link" href="#about">ABOUT</a></li>
-                    <li><a class="nav_link" href="#about">CONTACT</a></li>
+                    <li><a class="nav_link" href="#contact">CONTACT</a></li>
                 </ul>
                 <div class="me">
                     <img class="me_img" src="./assets/img/portrait/portrait1.jpg" alt="Portrait de Laurent D'ALEO">
@@ -155,28 +155,15 @@
         </section>
 
         <!--                  Contact                           -->
-        <section class="contact_container">
+        <section class="contact_container" id="contact">
             <h4 class="contact_title">CONTACT</h4>
-            <form action="" class="contact_form">
-                <div>
-                    <label for="firstName">Prénom:</label><br>
-                    <input type="text" id="firstName" name="firstName" required><br>
-                </div>
-                <div>
-                    <label for="lastName">Nom:</label><br>
-                    <input type="text" id="lastName" name="lastName" required><br>
-                </div>
-                <div>
-                    <label for="email">Email:</label><br>
-                    <input type="email" id="email" name="email" required><br>
-                </div>
-                <div>
-                    <label for="message">Message:</label><br>
-                    <textarea id="message" name="message" rows="4" required></textarea><br>
-                </div>
-                <button type="submit">Envoyer</button>
-            </form>
         </section>
     </main>
+    <footer class="footer_container">
+        <div class="footer_img_content">
+            <img src="./assets/img/logos/Logo.png" class="footer_img" alt="Logo Laurent D'ALEO">
+        </div>
+        <p class="footer_mention">&copy; Laurent D'ALEO. Tous droits réservés.</p>
+    </footer>
 </body>
 </html>
