--- a/index.html
+++ b/index.html
@@ -157,6 +157,11 @@
         <!--                  Contact                           -->
         <section class="contact_container" id="contact">
             <h4 class="contact_title">CONTACT</h4>
+
+            <div class="send_mail_content">
+                <h5 class="send_mail_title" >Vous pouvez me contacter par e-mail ci-dessous:</h5>
+                <button class="send_btn" ><a  class="mailto" href="laurent.daleo@gmail.com">Envoyer un e-mail</a></button>
+            </div>
         </section>
     </main>
     <footer class="footer_container">
