fix: responsive about on tablet

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <li><a class="nav_link" href="#contact">CONTACT</a></li>
                 </ul>
                 <div class="me">
-                    <img class="me_img" src="./assets/img/portrait/portrait1.jpg" alt="Portrait de Laurent D'ALEO">
+                    <img class="me_img" src="./assets/img/portrait/portrait1.webp" alt="Portrait de Laurent D'ALEO">
                 </div>
             </div>
         </nav>
