fix: responsive modal

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
             <div class="send_mail_content">
                 <h5 class="send_mail_title" >Vous pouvez me contacter par e-mail ci-dessous:</h5>
-                <button class="send_btn" ><a  class="mailto" href="laurent.daleo@gmail.com">Envoyer un e-mail</a></button>
+                <div class="send_btn"><a class="mailto" href="mailto:laurent.daleo@gmail.com">Envoyer un e-mail</a></div>
             </div>
         </section>
     </main>
